fix spacing and styling

--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -2,7 +2,7 @@
   background-color: white;
   bottom: 0 !important;
   padding-top: 18px !important;
-  padding-bottom: 12px !important;
+  padding-bottom: 6px !important;
   border-top: black;
   margin-top: 40px;
 }
